--- a/合併.md
+++ b/合併.md
@@ -2,10 +2,12 @@
 
 提供各功能主頁面的檔名 例如 coupons-list.php
 
-把首頁的側欄改好加上所有應該有的頁面及連結<a> => 大家把側欄的CODE放進自己應該有側欄的php 
+把首頁的側欄改好加上所有應該有的頁面及連結<a> => 大家把側欄的CODE放進自己應該有側欄的php (應該每頁都有 除了純粹PHP的頁面)
 
 大家改完後傳檔案
 
 傳到同一資料夾
+
+匯入每一個資料庫sql
 
 測試 首頁連到各功能即從功能連回首頁
