--- a/合併.md
+++ b/合併.md
@@ -1,13 +1,13 @@
 # 把各自的檔案都先備份好
 
-提供各功能主頁面的檔名 例如 coupons-list.php
+提供各功能主頁面的檔名 例如 coupons-list.php 讓彙整者可以做側欄
 
-把首頁的側欄改好加上所有應該有的頁面及連結<a> => 大家把側欄的CODE放進自己應該有側欄的php (應該每頁都有 除了純粹PHP的頁面)
+把首頁的側欄改好加上所有應該有的頁面及連結<a>  -> 大家把側欄的CODE放進自己應該有側欄的php (應該每頁都有 除了純粹PHP的頁面)
 
 大家改完後傳檔案
 
 傳到同一資料夾
 
-匯入每一個資料庫sql
+彙整者 匯入每一個資料庫sql
 
-測試 首頁連到各功能即從功能連回首頁
+測試 首頁連到各功能以及從功能連回首頁
