--- a/合併.md
+++ b/合併.md
@@ -2,7 +2,7 @@
 
 提供各功能主頁面的檔名 例如 coupons-list.php 讓彙整者可以做側欄
 
-把首頁的側欄改好加上所有應該有的頁面及連結<a>  -> 大家把側欄的CODE放進自己應該有側欄的php (應該每頁都有 除了純粹PHP的頁面)
+把首頁的側欄改好加上所有應該有的頁面及連結<a>  -> 大家把側欄的code放進自己應該要有側欄的php (應該每頁都有 除了純粹功能PHP的頁面)
 
 大家改完後傳檔案
 
